# otterwiki-semantic-search

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
otterwiki_semantic_search/: __init__.py  auth.py  chunking.py  frontmatter.py  index.py  registry.py  routes.py  sync.py
otterwiki_semantic_search/backends/: __init__.py  base.py  chroma_backend.py  faiss_backend.py
otterwiki_semantic_search/embeddings/: __init__.py  base.py  bedrock.py  onnx_embedding.py  sentence_transformer.py
tests/: conftest.py  test_bedrock_embedding.py  test_chunking.py  test_faiss_backend.py  test_frontmatter.py  test_integration.py  test_onnx_embedding.py  test_registry.py  test_search.py
