[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otterwiki-semantic-search"
description = "Semantic/similarity search plugin for An Otter Wiki"
version = "0.2.0"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "otterwiki",
    "pyyaml",
]

[project.optional-dependencies]
chroma = [
    "chromadb",
]
faiss = [
    "faiss-cpu",
    "numpy",
]
local = [
    "sentence-transformers",
]
bedrock = [
    "boto3",
]
dev = [
    "pytest",
]

[project.entry-points.otterwiki]
semantic_search = "otterwiki_semantic_search"

[tool.pytest.ini_options]
testpaths = ["tests"]
